--- a/app/main/views/contract/contract.html
+++ b/app/main/views/contract/contract.html
@@ -18,10 +18,13 @@
     <div class="col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
             <div class="x_title">
-                <h2>Hợp Đồng</h2>
+                <!-- <h2>Hợp Đồng</h2> -->
                 <ul class="nav navbar-right panel_toolbox">
                     <li class="dropdown">
-                        <a class="dropdown-toggle cursor" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                        <a class="dropdown-toggle cursor" data-toggle="dropdown" role="button" aria-expanded="false">
+                            Thêm
+                            <i class="fa fa-wrench"></i>
+                        </a>
                         <ul class="dropdown-menu" role="menu">
                             <li>
                                 <a data-toggle="modal" data-target="#add_contract" class="cursor"> Thêm hợp đồng </a>
@@ -180,7 +183,7 @@
                         <tbody>
                             <tr class="even pointer" ng-repeat="contract in filtered = allContract | filter : search |
                                 startFrom:(currentPage-1)*entryLimit | limitTo:entryLimit">
-                                <td class=" ">{{contract.partner.partnerInfo.partnerName}}</td>
+                                <td class=" ">{{contract.partner.partnerName}}</td>
                                 <td class=" ">{{contract.partner.nation.nationName}}</td>
                                 <td class=" ">{{contract.uetMan.uetManName}}</td>
                                 <td class=" ">{{contract.partnerContact.contactName}}
@@ -298,7 +301,7 @@
                 </div>
                 <!-- end edit partner info -->
                 <!-- them hop dong -->
-                <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-hidden="true" id="add_contract" ng-init="getAllPartner(); getAllUnitName(); getAllUetMan(); getAllTypeContract()">
+                <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" aria-hidden="true" id="add_contract" ng-init="getAllPartner(); getAllUnitName(); getAllUetMan();">
                     <div class="modal-dialog modal-lg">
                         <div class="modal-content">
                             <div class="modal-header">
@@ -313,7 +316,7 @@
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <select class="form-control" ng-model="input.partnerId" ng-change="getPartnerContact(input.partnerId)">
                                                 <option ng-repeat="partner in allPartner" value="{{partner.id}}">
-                                                    {{partner.partnerInfo.partnerName}}
+                                                    {{partner.partnerName}}
                                                 </option>
                                             </select>
                                         </div>
@@ -348,7 +351,7 @@
                                             </select>
                                         </div>
                                     </div>
-                                    <div class="form-group">
+                                    <!-- <div class="form-group">
                                         <label class="control-label col-md-4 col-sm-4 col-xs-12">Loại hợp đồng: </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
                                             <select class="form-control" ng-model="input.typeContractId">
@@ -357,7 +360,7 @@
                                                 </option>
                                             </select>
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="form-group">
                                         <label class="control-label col-md-4 col-sm-4 col-xs-12" for="last-name">Nội dung hợp tác chính: </label>
                                         <div class="col-md-6 col-sm-6 col-xs-12">
