--- a/app/main/views/nation_continent/nation_continent.html
+++ b/app/main/views/nation_continent/nation_continent.html
@@ -21,7 +21,10 @@
                 <h2>Châu lục</h2>
                 <ul class="nav navbar-right panel_toolbox">
                     <li class="dropdown">
-                        <a class="dropdown-toggle cursor" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
+                        <a class="dropdown-toggle cursor" data-toggle="dropdown" role="button" aria-expanded="false">
+                            Thêm
+                            <i class="fa fa-wrench"></i>
+                        </a>
                         <ul class="dropdown-menu" role="menu">
                             <li><a data-toggle="collapse" data-target="#add_nation" class="cursor"> Thêm Quốc Gia </a>
                             </li>
