sua lai giao dien, noi chung la cung nhieu thu, ko nho dau :))

--- a/app/main/views/nation_continent/nation_continent.html
+++ b/app/main/views/nation_continent/nation_continent.html
@@ -1,6 +1,6 @@
 <div class="clearfix"></div>
 <div class="row" ng-init="getAllNation()">
-    <div class="col-md-12 col-sm-12 col-xs-12">
+    <div class="col-md-12 col-sm-12 col-xs-12" ng-init="getAllContinent()">
         <!-- <div class="x_panel"> -->
         <div class="x_title">
             <!-- <h2>Châu lục</h2> -->
