chia nho cac phan information contact thanh tung view nho, sua lai hien chu huy va xac nhan khi chinh sua hoat dong

--- a/app/main/views/partner/partner.annualActivity.html
+++ b/app/main/views/partner/partner.annualActivity.html
@@ -61,13 +61,9 @@
                             <td class=" " id="date_{{activity.id}}">{{activity.date | date:'dd/MM/yyyy'}}</td>
                             <td class="cursor ">
                                 <i id="edit_activity_{{activity.id}}" class="fa fa-edit cursor" ng-click="editAnnualActivity(activity.id, activity.content); edit_activity = true"></i>
-                                <i id="save_edit_activity_{{activity.id}}" class="fa fa-save cursor" ng-click="saveEditAnnualActivity(activity.id)" ng-if="edit_activity"></i>
+                                <button id="button_cancel_edit_activity_{{activity.id}}" ng-if="edit_activity" type="button" class="btn btn-default btn-xs" ng-click="cancelEditActivity(activity.id, activity)">Hủy</button>
+                                <button id="save_edit_activity_{{activity.id}}" ng-if="edit_activity" type="button" class="btn btn-success btn-xs" ng-click="saveEditAnnualActivity(activity.id)">Xác nhận</button>
                             </td>
-                            <!-- <td id="confirm_delete_activity_{{activity.id}}">
-                                <i id="i_confirm_delete_activity_{{activity.id}}" class="fa fa-trash cursor" ng-click="confirmDeleteActivity(activity.id); deleteActivityValue = true"></i>
-                                <button id="button_confirm_delete_activity_{{activity.id}}" ng-if="deleteActivityValue" type="button" class="btn btn-default btn-xs" ng-click="cancerDeleteActivity(activity.id)">Hủy</button>
-                                <button id="button_delete_activity_{{activity.id}}" ng-if="deleteActivityValue" type="button" class="btn btn-success btn-xs" ng-click="deleteAnnualActivity(activity.id)">Xác nhận</button>
-                            </td> -->
                             <td class=" ">
                                 <a class="cursor" ng-click="confirmDelete(activity.id, activity.activityName)" data-toggle="modal" data-target="#delete_activity_"><i class="fa fa-trash"></i></a>
                             </td>
