--- a/app/main/views/partner/partner.all.html
+++ b/app/main/views/partner/partner.all.html
@@ -394,7 +394,7 @@
                                     </a>
                             </td>
                             <td>
-                                <a class="cursor" data-toggle="modal" data-target="#show_partner_details" ng-click="editPartner(partner); getAllContractOfPartner(); click('contract-tab')">
+                                <a class="cursor" data-toggle="modal" data-target="#show_partner_details" ng-click="editPartner(partner); click('contract-tab')">
                                         Chi Tiết
                                     </a>
                             </td>
@@ -404,7 +404,7 @@
                                     </a>
                             </td>
                             <td class=" ">
-                                <a data-toggle="modal" class="cursor" data-target="#show_partner_details" ng-click="editPartner(partner); getAllAnnualActivityOfPartner(); click('activity-tab')">
+                                <a data-toggle="modal" class="cursor" data-target="#show_partner_details" ng-click="editPartner(partner); click('activity-tab')">
                                     Chi Tiết
                                 </a>
                             </td>
@@ -420,12 +420,12 @@
                 <ul uib-pagination total-items="totalItems" ng-model="currentPage" max-size="noOfPages" items-per-page="entryLimit"></ul>
             </div>
             <!-- partner contacts -->
-            <div class="modal fade bs-example-modal-lg"  role="dialog" aria-hidden="true" id="show_partner_details">
+            <div class="modal fade bs-example-modal-lg" role="dialog" aria-hidden="true" id="show_partner_details">
                 <div class="modal-dialog" style="width: 80vw;">
-                    <div class="modal-content">
+                    <div class="modal-content" id="show_partner_details_modal_content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" id="close_modal_show_partner_details"><span aria-hidden="true">×</span>
-                            </button>
+                            <!-- <button type="button" class="close" data-dismiss="modal" id="close_modal_show_partner_details"><span aria-hidden="true">×</span>
+                            </button> -->
                             <h4 class="modal-title" id="myModalLabel">Thông tin liên lạc {{PartnerContacts.partnerName}}</h4>
                         </div>
                         <div class="modal-body">
@@ -437,13 +437,14 @@
                             </div>
                             <div class="" role="tabpanel" data-example-id="togglable-tabs">
                                 <ul id="myTab" class="nav nav-tabs bar_tabs" role="tablist">
-                                    <li role="presentation"><a class="cursor" data-target="#contract" ng-click="getAllContractOfPartner()" role="tab" id="contract-tab" data-toggle="tab" aria-expanded="false">Hợp đồng</a>
+                                    <li role="presentation"><a class="cursor" data-target="#contract"  role="tab" id="contract-tab" data-toggle="tab" aria-expanded="false">Hợp đồng</a>
+                                    
                                     </li>
                                     <li role="presentation"><a data-target="#information" class="cursor" id="information-tab" role="tab" data-toggle="tab" aria-expanded="true">Thông tin đối tác</a>
                                     </li>
-                                    <li role="presentation"><a data-target="#activity" ng-click="getAllAnnualActivityOfPartner()" class="cursor" id="activity-tab" role="tab" data-toggle="tab" aria-expanded="true">Hoạt động</a>
+                                    <li role="presentation"><a data-target="#activity" class="cursor" id="activity-tab" role="tab" data-toggle="tab" aria-expanded="true">Hoạt động<span class="badge bg-red" ng-if="editAnnualActivityCount > 0">{{editAnnualActivityCount}}</span></a>
                                     </li>
-                                    <li role="presentation"><a data-target="#contact" ng-click="showContact(Partner)" class="cursor" id="contact-tab" role="tab" data-toggle="tab" aria-expanded="true">Liên hệ</a>
+                                    <li role="presentation"><a data-target="#contact" class="cursor" id="contact-tab" role="tab" data-toggle="tab" aria-expanded="true">Liên hệ<span class="badge bg-red" ng-if="editContactCount > 0">{{editContactCount}}</span></a>
                                     </li>
                                 </ul>
                                 <div id="myTabContent" class="tab-content">
@@ -468,11 +469,11 @@
                 </div>
             </div>
             <!-- end partner contacts -->
-            <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-hidden="true" id="delete_partner">
+            <div class="modal fade bs-example-modal-sm delete-modal" tabindex="-1" role="dialog" aria-hidden="true" id="delete_partner">
                 <div class="modal-dialog modal-sm">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="close_modal_delete_partner"><span aria-hidden="true">×</span>
+                            <button type="button" class="close" data-dismiss="modal" id="close_modal_delete_partner"><span aria-hidden="true">×</span>
                             </button>
                             <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa Đối tác này này?</h4>
                         </div>
@@ -483,22 +484,68 @@
                     </div>
                 </div>
             </div>
-            <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-hidden="true" id="delete_partner_contact">
+            <div class="modal fade bs-example-modal-sm delete-modal" tabindex="-1" role="dialog" aria-hidden="true" id="delete_partner_contact">
                 <div class="modal-dialog modal-sm">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="close_modal_delete_partner_contact"><span aria-hidden="true">×</span>
+                            <button type="button" class="close" ng-click="closeModal('delete_partner_contact')" id="close_modal_delete_partner_contact"><span aria-hidden="true">×</span>
                             </button>
                             <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa liên hệ của Đối tác này này?</h4>
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
+                            <button type="button" class="btn btn-default" ng-click="closeModal('delete_partner_contact')">Hủy</button>
                             <button type="button" class="btn btn-primary" ng-click="deletePartnerContact(confirmDeleteId)">Xóa</button>
                         </div>
                     </div>
                 </div>
             </div>
-
+            <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-hidden="true" id="confirm_close_modal">
+                <div class="modal-dialog modal-sm">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" ng-click="closeModal('confirm_close_modal')">×</span>
+                            </button>
+                            <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn hủy bỏ nhừng việc đang làm?</h4>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" ng-click="closeModal('confirm_close_modal')">Không</button>
+                            <button type="button" class="btn btn-primary" ng-click="closeModal('confirm_close_modal'); closeModal('show_partner_details');">Có</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal fade bs-example-modal-sm delete-modal" tabindex="-1" role="dialog" aria-hidden="false" id="delete_activity_">
+                <div class="modal-dialog modal-sm">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" ng-click="closeModal('delete_activity_')" id="close_modal_delete"><span aria-hidden="true">×</span>
+                            </button>
+                            <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa hoạt động {{confirmDeleteName}}</h4>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" ng-click="closeModal('delete_activity_')">Hủy</button>
+                            <button type="button" class="btn btn-primary" ng-click="deleteAnnualActivity(confirmDeleteId, false)">Xóa</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- confirm delete cotnract -->
+            <div class="modal fade bs-example-modal-sm delete-modal" tabindex="-1" role="dialog" aria-hidden="true" id="delete_contract">
+                <div class="modal-dialog modal-sm">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" ng-click="close('delete_contract')" id="close_modal_delete"><span aria-hidden="true">×</span>
+                            </button>
+                            <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa hợp đồng này</h4>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" ng-click="close('delete_contract')">Hủy</button>
+                            <button type="button" class="btn btn-primary" ng-click="deleteContract(); close('delete_contract');">Xóa</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- end confirm delete contract -->
         </div>
         <!-- </div> -->
     </div>
