--- a/app/main/views/partner/partner.annualActivity.html
+++ b/app/main/views/partner/partner.annualActivity.html
@@ -34,7 +34,7 @@
             </div>
             <div class="table-responsive">
                 <!-- <ul uib-pagination total-items="totalItems" ng-model="currentPage" max-size="noOfPages" items-per-page="entryLimit"></ul> -->
-                <table class="table table-striped jambo_table bulk_action" id="tableExcel">
+                <table class="table table-striped jambo_table bulk_action">
                     <thead>
                         <tr class="headings">
                             <!-- <th> -->
@@ -54,7 +54,7 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="even pointer" ng-repeat="activity in allAnnaulActivityOfPartner" id="annualActivity_{{activity.id}}">
+                        <tr class="even pointer" ng-repeat="activity in Partner.annualActivity" id="annualActivity_{{activity.id}}">
                             <td class=" " id="activityName_{{activity.id}}">{{activity.activityName}}</td>
                             <td class=" " ng-bind-html="activity.content" id="content_{{activity.id}}"></td>
                             <td class=" " id="funding_{{activity.id}}">{{activity.funding}}</td>
@@ -74,21 +74,6 @@
                     </tbody>
                 </table>
                 <!-- <ul uib-pagination total-items="totalItems" ng-model="currentPage" max-size="noOfPages" items-per-page="entryLimit"></ul> -->
-            </div>
-            <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-hidden="false" id="delete_activity_">
-                <div class="modal-dialog modal-sm">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <button type="button" class="close" ng-click="closeModal('delete_activity_')" id="close_modal_delete"><span aria-hidden="true">×</span>
-                            </button>
-                            <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa hoạt động {{confirmDeleteName}}</h4>
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" ng-click="closeModal('delete_activity_')">Hủy</button>
-                            <button type="button" class="btn btn-primary" ng-click="deleteAnnualActivity(confirmDeleteId, false)">Xóa</button>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
         <!-- </div> -->
